--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2170,6 +2170,31 @@
     <p class="footnote">3. Br. 132.</p>
     <p class="footnote">4. AM. 1, 15.</p>
     <p class="footnote">5. Mt. 24, 45.</p>
+    <p><em>ϩⲱⲃ ⲛⲓⲃⲉⲛ</em> «toute chose», <em>ⲃⲁⲗ ⲛⲓⲃⲉⲛ</em> «tout œil».</p>
+    <p>Mais pour le mot <em>ⲙⲁ</em> «lieu», le pluriel <em>ⲙⲁⲓ</em> (<i>Nomb.</i> 18, 31) est plus fréquent que le singulier (<i>Gen.</i> 20, 13).</p>
+    <p>Le verbe et les autres mots qui se rapportent au nom déterminé par <em>ⲛⲓⲃⲉⲛ</em> se mettent au pluriel:</p>
+    <p><em>ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲁⲩϣⲱⲡⲓ ⲉⲃⲟⲗ ϩⲓⲧⲟⲧϥ</em> «toutes les choses ont été faites par lui»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛⲓϥⲓ ⲛⲓⲃⲉⲛ ⲥⲉⲥⲙⲟⲩ ⲉⲣⲟⲕ</em> «tout esprit te loue»<sup class="footnote">2</sup>.</p>
+    <p>Cependant on trouve quelquefois le singulier:</p>
+    <p><em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲑⲛⲁϭⲁⲥϥ ⲥⲉⲛⲁⲑⲉⲃⲓⲟϥ</em> «quiconque s'élève sera humilié»<sup class="footnote">3</sup>.</p>
+    <p>III. Accord de l'adjectif.</p>
+    <p>Les adjectifs primitifs sont invariables.</p>
+    <p>Les autres adjectifs qui ont un féminin et un pluriel s'accordent en genre et en nombre avec leur substantif:</p>
+    <p><em>ⲟⲩⲥⲁⲃⲏ ⲛ̀ⲥϩⲓⲙⲓ</em> «une femme prudente»;</p>
+    <p><em>ϩⲁⲛⲥⲁⲃⲉⲩ ⲛ̀ⲣⲱⲙⲓ</em> «des hommes prudents».</p>
+    <p>Cependant, quand ils sont attributs, ils restent ordinairement invariables:</p>
+    <p><em>ϥⲛⲁⲁⲓⲧⲉⲛ ⲛ̀ⲣⲁⲙⲁⲟ</em> «il nous rendra riches»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲉⲥ-ⲟⲓ ⲛ̀ⲣⲉⲙϩⲉ</em> «elle est libre»<sup class="footnote">5</sup>.</p>
+    <p>De même, le mot qui est au second rang demeure le plus souvent invariable, parfois aussi il s'accorde:</p>
+    <p><em>ϩⲁⲛⲣⲱⲙⲓ ⲛ`ⲥⲁⲃⲉ</em> «des hommes prudents»<sup class="footnote">6</sup>.</p>
+    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ`ⲥϩⲓⲙⲓ</em> «des femmes prudentes»<sup class="footnote">7</sup>.</p>
+    <p class="footnote">1. Jean 1, 3.</p>
+    <p class="footnote">2. Th. 128.</p>
+    <p class="footnote">3. Luc 14, 11.</p>
+    <p class="footnote">4. Th. 99, 1.</p>
+    <p class="footnote">5. Deut. 21, 14.</p>
+    <p class="footnote">6. Deut. 1, 15.</p>
+    <p class="footnote">7. Pr. 14, 1.</p>
   </div>
 </div>
 	</body>
