--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2195,6 +2195,29 @@
     <p class="footnote">5. Deut. 21, 14.</p>
     <p class="footnote">6. Deut. 1, 15.</p>
     <p class="footnote">7. Pr. 14, 1.</p>
+    <p>IV. De la comparaison.</p>
+    <p><i>A. Comparatif.</i></p>
+    <p>Le comparatif <i>d'infériorité</i> «moins» n'existe pas en copte; on ne dit pas «moins grand», mais «plus petit».</p>
+    <p>Le comparatif de <i>supériorité</i> «plus», pour les adjectifs, verbes et adverbes se rend par <em>ⲉ-</em>, <em>ⲉⲣⲟ⸗</em> ou bien par:</p>
+    <p><em>ⲉϩⲟⲧⲉ-</em>, devant un nom;</p>
+    <p><em>ⲉϩⲟⲧⲉ ⲉ-</em>, <em>ⲉϩⲟⲧⲉ ⲛ̀ⲧⲉ</em> (subj.), devant un verbe;</p>
+    <p><em>ⲉϩⲟⲧⲉ ⲉⲣⲟ⸗</em>, <em>ⲉϩⲟⲧⲉⲣⲟ⸗</em>, avec les suffixes.</p>
+    <p><i>Ex.</i></p>
+    <p><em>ⲉⲛⲁⲁϥ ⲉ ⲓⲱⲁⲛⲛⲏⲥ</em> «plus grand que Jean»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛⲓϣϯ ⲉⲣⲟϥ</em> «plus grand que lui»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡⲁⲛⲟⲃⲓ ⲟⲩⲛⲓϣϯ ⲡⲉ ⲉ ⲭⲁϥ ⲛⲏⲓ ⲉⲃⲟⲗ</em> «mon péché est trop grand pour m'être pardonné»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲉⲓⲉⲟⲩⲃⲁϣ ⲉϩⲟⲧⲉ ⲟⲩⲭⲓⲱⲛ</em> «je deviendrai plus blanc que la neige»<sup class="footnote">3</sup>.</p>
+    <p><em>ϥϫⲟⲣ ⲉϩⲟⲧⲉⲣⲟⲓ</em> «il est plus fort que moi»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲛⲁⲛⲉⲥ ⲉⲧⲏⲓⲥ ⲛⲁⲕ ⲉϩⲟⲧⲉ ⲉ ⲧⲏⲓⲥ ⲛ̀ⲕⲉⲣⲱⲙⲓ</em> «il vaut mieux te la donner à toi que de la donner à un autre»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲛⲁⲛⲉⲥ ⲛ̀ⲧⲉⲛⲉⲣⲃⲱⲕ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲉϩⲟⲧⲉ ⲛ̀ⲧⲉⲛⲙⲟⲩ ⲛ̀ϩⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> «mieux vaut être esclaves des Egyptiens que de mourir dans le désert»<sup class="footnote">6</sup>.</p>
+    <p>Quand le terme de comparaison n'est pas exprimé, on se sert de <em>ⲛ̀-ϩⲟⲩⲟ</em> «davantage» placé après le mot qu'il détermine:</p>
+    <p><em>ⲉϥⲥⲟⲧⲡ ⲛ̀ϩⲟⲩⲟ</em> «plus parfait».</p>
+    <p class="footnote">1. Mt. 11, 11.</p>
+    <p class="footnote">2. Gen. 4, 13.</p>
+    <p class="footnote">3. Ps. 50, 9.</p>
+    <p class="footnote">4. Mt. 3, 11.</p>
+    <p class="footnote">5. Gen. 29, 19.</p>
+    <p class="footnote">6. Ex. 14, 12.</p>
   </div>
 </div>
 	</body>
