--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2218,6 +2218,22 @@
     <p class="footnote">4. Mt. 3, 11.</p>
     <p class="footnote">5. Gen. 29, 19.</p>
     <p class="footnote">6. Ex. 14, 12.</p>
+    <p><i>B. Superlatif.</i></p>
+    <p>1. Le superlatif <i>absolu</i> s'exprime au moyen de <em>ⲉⲙⲁϣⲱ</em> «très, beaucoup» ajouté à l'adjectif:</p>
+    <p><em>ⲟⲩⲛⲓϣϯ ⲛ̀ⲣⲁϣⲓ ⲉⲙⲁϣⲱ</em> «une très grande joie»<sup class="footnote">1</sup>.</p>
+    <p>On trouve aussi <em>ⲙ̀ⲙⲁϣⲱ</em> «très»:</p>
+    <p><em>ⲉϥϩⲟⲣϣ ⲙ̀ⲙⲁϣⲱ</em> «très lourd»<sup class="footnote">2</sup>.</p>
+    <p>2. Le superlatif <i>relatif</i> se rend par les particules <em>ϧⲉⲛ</em>, <em>ⲉⲃⲟⲗ ⲟⲩⲧⲉ</em> «entre, de, parmi» précédées de l'adjectif et suivies du complément:</p>
+    <p><em>ⲫⲏ ⲉⲧⲟⲓ ⲛ̀ⲕⲟⲩϫⲓ ϧⲉⲛ ⲑⲏⲛⲟⲩ</em> «celui qui est le plus petit parmi vous»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲡⲓⲕⲟⲩϫⲓ ⲉⲃⲟⲗ ⲟⲩⲧⲉ ⲛⲓⲁⲡⲟⲥⲧⲟⲗⲟⲥ</em> «le plus petit des Apôtres»<sup class="footnote">4</sup>.</p>
+    <p>Chapitre IX.</p>
+    <p>De la Numération.</p>
+    <p>I. Les nombres.</p>
+    <p>Les nombres sont représentés par les lettres surmontées d'un seul trait jusqu'à mille et de deux à partir de mille.</p>
+    <p class="footnote">1. Mt. 2, 10.</p>
+    <p class="footnote">2. Fr. R. 91, 19.</p>
+    <p class="footnote">3. Luc 9, 48.</p>
+    <p class="footnote">4. 1 Cor. 15, 9.</p>
   </div>
 </div>
 	</body>
