--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2234,6 +2234,8 @@
     <p class="footnote">2. Fr. R. 91, 19.</p>
     <p class="footnote">3. Luc 9, 48.</p>
     <p class="footnote">4. 1 Cor. 15, 9.</p>
+    <p>1. Nombres cardinaux.</p>
+    <p><i>1. Les nombres simples.</i></p>
   </div>
 </div>
 	</body>
