--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2236,6 +2236,32 @@
     <p class="footnote">4. 1 Cor. 15, 9.</p>
     <p>1. Nombres cardinaux.</p>
     <p><i>1. Les nombres simples.</i></p>
+    <table>
+      <tr><td></td><td></td><td>Boḥairique</td><td></td><td>Ṣaꜥidique</td><td></td></tr>
+      <tr><td></td><td></td><td>masc.</td><td>fém.</td><td>masc.</td><td>fém.</td></tr>
+      <tr><td>1</td><td><em>ⲁ̅</em></td><td><em>ⲟⲩⲁⲓ</em></td><td><em>ⲟⲩⲓ</em></td><td><em>ⲟⲩⲁ</em></td><td><em>ⲟⲩⲉⲓ</em></td></tr>
+      <tr><td>2</td><td><em>ⲃ̅</em></td><td><em>ⲥⲛⲁⲩ</em></td><td><em>ⲃ̅ϯ ⲥⲛⲟⲩϯ</em></td><td><em>ⲥⲛⲁⲩ</em></td><td><em>ⲥⲉⲛⲧⲉ</em></td></tr>
+      <tr><td>3</td><td><em>ⲅ̅</em></td><td><em>ϣⲟⲙⲧ</em></td><td><em>ⲅ̅ϯ ϣⲟⲙϯ</em></td><td><em>ϣⲟⲙⲛⲧ</em></td><td><em>ϣⲟⲙⲧⲉ</em></td></tr>
+      <tr><td>4</td><td><em>ⲇ̅</em></td><td><em>ϥⲧⲱⲟⲩ, ϥⲧⲟⲩ-</em></td><td></td><td><em>ϥⲧⲟⲟⲩ</em></td><td><em>ϥⲧⲟⲉ, ϥⲧⲟ</em></td></tr>
+      <tr><td>5</td><td><em>ⲉ̅</em></td><td><em>ϯⲟⲩ</em></td><td></td><td><em>ϯⲟⲩ</em></td><td><em>ϯⲉ</em></td></tr>
+      <tr><td>6</td><td><em>ⲋ̅</em></td><td><em>ⲥⲟⲟⲩ</em></td><td></td><td><em>ⲥⲟⲟⲩ</em></td><td><em>ⲥⲟⲉ, ⲥⲟ</em></td></tr>
+      <tr><td>7</td><td><em>ⲍ̅</em></td><td><em>ϣⲁϣϥ</em></td><td><em>ⲍ̅ϯ ϣⲁϣϥⲓ</em></td><td><em>ⲥⲁϣϥ</em></td><td><em>ⲥⲁϣϥⲉ</em></td></tr>
+      <tr><td>8</td><td><em>ⲏ̅</em></td><td><em>ϣⲙⲏⲛ</em></td><td><em>ⲏ̅ϯ ϣⲙⲏⲛⲓ</em></td><td><em>ϣⲙⲟⲩⲛ</em></td><td><em>ϣⲙⲟⲩⲛⲉ</em></td></tr>
+      <tr><td>9</td><td><em>ⲑ̅</em></td><td><em>ⲯⲓⲧ</em></td><td><em>ⲑ̅ϯ ⲯⲓϯ</em></td><td><em>ⲯⲓⲥ</em></td><td><em>ⲯⲓⲧⲉ</em></td></tr>
+      <tr><td>10</td><td><em>ⲓ̅</em></td><td><em>ⲙⲏⲧ, ⲙⲉⲧ-</em></td><td><em>ⲓ̅ϯ ⲙⲏϯ</em></td><td><em>ⲙⲏⲧ</em></td><td><em>ⲙⲏⲧⲉ</em></td></tr>
+      <tr><td>20</td><td><em>ⲕ̅</em></td><td><em>ϫⲱⲧ</em></td><td><em>ⲕ̅ϯ ϫⲱϯ</em></td><td><em>ϫⲟⲩⲱⲧ</em></td><td><em>ϫⲟⲩⲱⲧⲉ</em></td></tr>
+      <tr><td>30</td><td><em>ⲗ̅</em></td><td><em>ⲙⲁⲡ, ⲙⲁⲃ</em></td><td></td><td><em>ⲙⲁⲁⲃ</em></td><td></td></tr>
+      <tr><td>40</td><td><em>ⲙ̅</em></td><td><em>ϩⲙⲉ</em></td><td></td><td><em>ϩⲙⲏ, ϩⲙⲉ</em></td><td></td></tr>
+      <tr><td>50</td><td><em>ⲛ̅</em></td><td><em>ⲧⲉⲟⲩⲓ, ⲧⲁⲓⲟⲩ</em></td><td></td><td><em>ⲧⲁⲓⲟⲩ</em></td><td></td></tr>
+      <tr><td>60</td><td><em>ⲝ̅</em></td><td><em>ⲥⲉ</em></td><td></td><td><em>ⲥⲉ</em></td><td></td></tr>
+      <tr><td>70</td><td><em>ⲟ̅</em></td><td><em>ϣⲃⲉ, ϣϥⲉ</em></td><td></td><td><em>ϣⲃⲉ, ϣϥⲉ</em></td><td></td></tr>
+      <tr><td>80</td><td><em>ⲡ̅</em></td><td><em>ϧⲁⲙⲛⲉ</em></td><td></td><td><em>ϩⲙⲉⲛⲉ</em></td><td></td></tr>
+      <tr><td>90</td><td><em>ϥ̅</em></td><td><em>ⲡⲓⲥⲧⲉⲟⲩⲓ</em></td><td></td><td><em>ⲡⲉⲥⲧⲁⲓⲟⲩ</em></td><td></td></tr>
+      <tr><td>100</td><td><em>ⲣ̅</em></td><td><em>ϣⲉ</em></td><td></td><td><em>ϣⲉ</em></td><td></td></tr>
+      <tr><td>200</td><td><em>ⲥ̅</em></td><td><em>ϣⲏⲓ</em></td><td></td><td><em>ϣⲏⲧ</em></td><td></td></tr>
+      <tr><td>1000</td><td><em>ⲁ̿</em></td><td><em>ϣⲟ</em></td><td></td><td><em>ϣⲟ</em></td><td></td></tr>
+      <tr><td>10000</td><td><em>ⲓ̿</em></td><td><em>ⲑⲃⲁ</em></td><td></td><td><em>ⲧⲃⲁ</em></td><td></td></tr>
+    </table>
   </div>
 </div>
 	</body>
