--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2262,6 +2262,115 @@
       <tr><td>1000</td><td><em>ⲁ̿</em></td><td><em>ϣⲟ</em></td><td></td><td><em>ϣⲟ</em></td><td></td></tr>
       <tr><td>10000</td><td><em>ⲓ̿</em></td><td><em>ⲑⲃⲁ</em></td><td></td><td><em>ⲧⲃⲁ</em></td><td></td></tr>
     </table>
+    <p><i>2. Les nombres composés.</i></p>
+    <p>Dizaines.</p>
+    <p>De 11 à 100 on forme les nombres en ajoutant les unités aux dizaines:</p>
+    <table>
+      <tr>
+        <td>11</td><td><em>ⲓ̅ⲁ̅</em></td><td><em>ⲙⲉⲧ-ⲟⲩⲁⲓ</em></td>
+      </tr>
+      <tr>
+        <td>12</td><td><em>ⲓ̅ⲃ̅</em></td><td><em>ⲙⲉⲧ-ⲥⲛⲁⲩ</em></td>
+      </tr>
+      <tr>
+        <td>23</td><td><em>ⲕ̅ⲅ̅</em></td><td><em>ϫⲱⲧ-ϣⲟⲙⲧ</em></td>
+      </tr>
+      <tr>
+        <td>34</td><td><em>ⲗ̅ⲇ̅</em></td><td><em>ⲙⲁⲡ-ϥⲧⲱⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>45</td><td><em>ⲙ̅ⲉ̅</em></td><td><em>ϩⲙⲉ-ϯⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>89</td><td><em>ⲡ̅ⲑ̅</em></td><td><em>ϧⲁⲙⲛⲉ-ⲯⲓⲧ</em></td>
+      </tr>
+    </table>
+    <p>etc.</p>
+    <p>Centaines et mille.</p>
+    <p>On forme les centaines et les mille en plaçant les unités devant <em>ϣⲉ</em> 100 et <em>ϣⲟ</em> 1000 au moyen de <em>ⲛ̀</em>.</p>
+    <p><em>ⲥⲛⲁⲩ</em> se met généralement après, sans <em>ⲛ̀</em>:</p>
+    <table>
+      <tr>
+        <td>200</td><td><em>ⲥⲛⲁⲩ ⲛ̀-ϣⲉ</em>, <em>ⲃ̅ϣⲉ</em>, <em>ϣⲉⲥⲛⲁⲩ</em>.</td>
+      </tr>
+    </table>
+    <p>Pour 200 on peut aussi employer un mot spécial <em>ϣⲏⲓ</em> qui est comme le duel de <em>ϣⲉ</em>.</p>
+    <table>
+      <tr>
+        <td>300</td><td><em>ⲧ̅</em></td><td><em>ϣⲟⲙⲧ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>400</td><td><em>ⲩ̅</em></td><td><em>ϥⲧⲱⲟⲩ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>500</td><td><em>ⲫ̅</em></td><td><em>ϯⲟⲩ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>600</td><td><em>ⲭ̅</em></td><td><em>ⲥⲟⲟⲩ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>700</td><td><em>ⲯ̅</em></td><td><em>ϣⲁϣϥ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>800</td><td><em>ⲱ̅</em></td><td><em>ϣⲙⲏⲛ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>900</td><td><em>ⳁ̅</em><sup class="footnote">1</sup></td><td><em>ⲯⲓⲧ ⲛ̀ϣⲉ</em></td>
+      </tr>
+      <tr>
+        <td>2000</td><td><em>ⲃ̿</em></td><td><em>ⲃ̅ϣⲟ</em>, <em>ϣⲟ ⲥⲛⲁⲩ</em></td>
+      </tr>
+      <tr>
+        <td>3000</td><td><em>ⲅ̿</em></td><td><em>ϣⲟⲙⲧ ⲛ̀ϣⲟ</em></td>
+      </tr>
+    </table>
+    <p>etc.</p>
+    <p><i>Remarque.</i> Les mille peuvent aussi s'exprimer au moyen des centaines précédées des dizaines et unies par <em>ⲛ̀</em>:</p>
+    <p class="footnote">1. <em>ⲣ</em> <i>barré</i>, voir le tableau des abréviations à la fin de la grammaire.</p>
+    <table>
+      <tr>
+        <td>2000</td><td><em>ϫⲱⲧ ⲛ̀ϣⲉ</em></td><td>(vingt cents)</td>
+      </tr>
+      <tr>
+        <td>1100</td><td><em>ⲙⲉⲧ-ⲟⲩⲁⲓ ⲛ̀ϣⲉ</em></td><td>«onze cents»</td>
+      </tr>
+      <tr>
+        <td>1200</td><td><em>ⲙⲉⲧ-ⲥⲛⲁⲩ ⲛ̀ϣⲉ</em></td><td>«douze cents»</td>
+      </tr>
+    </table>
+    <p>etc.</p>
+    <p>Myriades et au-delà.</p>
+    <p>Pour exprimer les 10000, on emploie <em>ⲑⲃⲁ</em> «myriade»; au delà, on suit la marche ordinaire.</p>
+    <p><em>ⲥⲛⲁⲩ</em> se met toujours après:</p>
+    <table>
+      <tr>
+        <td>20000</td><td><em>ⲑⲃⲁ-ⲥⲛⲁⲩ</em></td><td>«2 myriades»</td>
+      </tr>
+      <tr>
+        <td>30000</td><td><em>ϣⲟⲙⲧ ⲛ̀ⲑⲃⲁ</em></td><td>«3 myriades»</td>
+      </tr>
+      <tr>
+        <td>40000</td><td><em>ϥⲧⲱⲟⲩ ⲛ̀ⲑⲃⲁ</em></td><td>4 myriades</td>
+      </tr>
+      <tr>
+        <td>100000</td><td><em>ⲣ̅ⲁ̿</em></td><td></td>
+      </tr>
+      <tr>
+        <td>1000000</td><td><em>ⲁ̿ⲁ̿</em></td><td></td>
+      </tr>
+    </table>
+    <p><i>3. Syntaxe.</i></p>
+    <p>Le nom de la chose nombrée se joint au nom de nombre au moyen de <em>ⲛ̀</em>, il reste au <i>singulier</i>. Le déterminatif qui précède, (article, adjectif, pronom) reste de même au <i>singulier</i>, masculin avec un nom masc. et féminin avec un nom féminin:</p>
+    <p><em>ⲡⲓ-ⲧⲉⲃⲧ ⲃ̅</em> «les deux poissons»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲧⲁⲓ-ⲉⲛⲧⲟⲗⲏ ⲃ̅ϯ</em> «ces deux préceptes»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲡⲓ-ⲙⲉⲧ-ⲥⲛⲁⲩ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «les 12 disciples».</p>
+    <p><em>ϯ-ⲙⲏϯ ⲙ̀ⲃⲁⲕⲓ</em> «les 10 villes»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲡⲓ-ϥⲧⲟⲩⲗⲁⲕϩ</em> «les quatre angles».</p>
+    <p><em>ⲡⲓ-ϥⲧⲟⲩⲑⲏⲟⲩ</em> «les quatre vents».</p>
+    <p>Le verbe auquel ces mots servent de sujet se met au pluriel:</p>
+    <p class="footnote">1. Mc. 6, 41.</p>
+    <p class="footnote">2. Mt. 22, 40.</p>
+    <p class="footnote">3. Mt. 4, 25.</p>
   </div>
 </div>
 	</body>
