--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2371,6 +2371,9 @@
     <p class="footnote">1. Mc. 6, 41.</p>
     <p class="footnote">2. Mt. 22, 40.</p>
     <p class="footnote">3. Mt. 4, 25.</p>
+    <p><em>ⲁⲩⲓ ϩⲁⲣⲟϥ ⲛ̀ϫⲉ ⲡⲓⲙⲉⲧⲥⲛⲁⲩ</em> «les douze vinrent vers lui»<sup class="footnote">1</sup>.</p>
+    <p>2. Nombres distributifs.</p>
+    <p>Les nombres cardinaux redoublés forment les distributifs:</p>
   </div>
 </div>
 	</body>
