--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2390,6 +2390,9 @@
         </table>
         <p><em>ⲁⲩⲣⲱⲧⲉⲃ ⲧⲏⲣⲟⲩ ⲙ̀ⲙⲁ ⲙⲁ ⲕⲁⲧⲁ ⲣ̅ⲣ̅ ⲛⲉⲙ ⲕⲁⲧⲁ ⲛ̅ⲛ̅</em> «ils prirent place par groupes de 100 et de 50»<sup class="footnote">3</sup>.</p>
         <p>De même on répète deux fois, sans article, les noms qu'on veut employer dans un sens distributif:</p>
+        <p><em>ⲛ̀ⲣⲱⲙⲓ ⲣⲱⲙⲓ</em> «par homme»;</p>
+        <p><em>ϯϧⲉⲗⲗⲟⲧ ⲇⲉ ⲛⲁⲥⲟⲓ ⲛ̀ϣⲱϯ ϣⲱϯ</em> «la vallée était percée de puits»<sup class="footnote">4</sup>.</p>
+        <p><i>Nombres périodiques.</i></p>
 			</div>
 		</div>
 	</body>
