--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2393,6 +2393,14 @@
         <p><em>ⲛ̀ⲣⲱⲙⲓ ⲣⲱⲙⲓ</em> «par homme»;</p>
         <p><em>ϯϧⲉⲗⲗⲟⲧ ⲇⲉ ⲛⲁⲥⲟⲓ ⲛ̀ϣⲱϯ ϣⲱϯ</em> «la vallée était percée de puits»<sup class="footnote">4</sup>.</p>
         <p><i>Nombres périodiques.</i></p>
+        <p>Ils s'expriment par les nombres distributifs joints au substantif au moyen de (<em>ⲛ̀</em>):</p>
+        <p><em>ⲥⲛⲁⲩ ⲥⲛⲁⲩ ⲛ̀ⲉϩⲟⲟⲩ</em> «tous les deux jours».</p>
+        <p>3. Nombres ordinaux.</p>
+        <p>Ils se forment par l'addition du préfixe <em>ⲙⲁϩ-</em> aux nombres cardinaux; ils se mettent avant ou après le substantif avec (<em>ⲛ̀</em>):</p>
+        <p class="footnote">1. Luc 9, 12.</p>
+        <p class="footnote">2. 1 Cor. 14, 31.</p>
+        <p class="footnote">3. Mc. 6, 40.</p>
+        <p class="footnote">4. Gen. 14, 10.</p>
 			</div>
 		</div>
 	</body>
