--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2401,6 +2401,32 @@
         <p class="footnote">2. 1 Cor. 14, 31.</p>
         <p class="footnote">3. Mc. 6, 40.</p>
         <p class="footnote">4. Gen. 14, 10.</p>
+        <p><em>ⲡⲓⲉϩⲟⲟⲩ ⲙ̀ⲙⲁϩϣⲟⲙⲧ</em> «le troisième jour»<sup class="footnote">1</sup>.</p>
+        <p><em>ⲡⲓⲙⲁϩϣⲟⲙⲧ ⲛ̀ⲉϩⲟⲟⲩ</em> <i>idem</i><sup class="footnote">2</sup>.</p>
+        <p><em>ϯⲣⲟⲙⲡⲓ ⲙ̀ⲙⲁϩⲥⲛⲟⲩϯ</em> «la deuxième année»<sup class="footnote">3</sup>.</p>
+        <p><em>ⲟⲩⲙⲁϩⲥⲛⲟⲩϯ ⲙ̀ⲫⲉ</em> «le deuxième ciel»<sup class="footnote">4</sup>.</p>
+        <p><i>Remarques.</i></p>
+        <p>1. <em>ⲥⲛⲁⲩ</em> est quelquefois séparé de <em>ⲙⲁϩ</em> par le substantif:</p>
+        <p><em>ϧⲉⲛ ⲥⲟⲩⲁⲓ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲙ̀ⲙⲁϩⲥⲛⲁⲩ ϧⲉⲛ ⲑⲙⲁϩⲣⲟⲙⲡⲓ ⲥⲛⲟⲩϯ</em> «le premier jour du second mois, la deuxième année»<sup class="footnote">5</sup>.</p>
+        <p>2. «Premier» se dit <em>ϣⲟⲣⲡ</em>, <i>fém.</i> <em>ϣⲟⲣⲡⲓ</em>, qui se place toujours avant le substantif, et <em>ϩⲟⲩⲓⲧ</em>, <i>fém.</i> <em>ϩⲟⲩⲓϯ</em>, qui se met avant ou après:</p>
+        <p><em>ⲡⲓⲉϩⲟⲟⲩ ⲛ̀ϩⲟⲩⲓⲧ</em> «le premier jour»<sup class="footnote">6</sup>.</p>
+        <p><em>ⲡⲓϩⲟⲩⲓⲧ ⲛ̀ⲁⲃⲟⲧ</em> «le premier mois»<sup class="footnote">7</sup>.</p>
+        <p><em>ϣⲟⲣⲡ ⲛ̀ⲟⲩⲧⲁϩ ⲛⲓⲃⲉⲛ</em> «tout premier fruit»<sup class="footnote">8</sup>.</p>
+        <p>4. Nombres fractionnaires.</p>
+        <p>«Demi» se traduit par <em>ⲫⲁϣⲓ</em>, de <em>ⲫⲱϣ</em> «diviser», ou par <em>ϫⲟⲥ</em>, <em>ϫⲉⲥ-</em>. Ce dernier mot prend toujours l'article indéfini <em>ⲟⲩ</em>. Quand le substantif est seul, <em>ϫⲟⲥ</em> se place après lui:</p>
+        <p><em>ⲟⲩⲙⲁϩⲓ ⲟⲩϫⲟⲥ</em> «une coudée et demie»<sup class="footnote">9</sup>.</p>
+        <p>Quand il y a un autre nombre, <em>ϫⲟⲥ</em> se place entre ce nombre et le substantif, excepté avec <em>ⲥⲛⲁⲩ</em> qui suit immédiatement le substantif:</p>
+        <p><em>ϣⲟⲙϯ ⲟⲩϫⲟⲥ ⲛ̀ⲣⲟⲙⲡⲓ</em> «trois années et demie»<sup class="footnote">10</sup>;</p>
+        <p class="footnote">1. Gen. 22, 3.</p>
+        <p class="footnote">2. Luc 9, 22.</p>
+        <p class="footnote">3. Gen. 47, 18.</p>
+        <p class="footnote">4. Th. 132.</p>
+        <p class="footnote">5. Nomb. 1, 1.</p>
+        <p class="footnote">6. Gen. 1, 5.</p>
+        <p class="footnote">7. Lév. 23, 5.</p>
+        <p class="footnote">8. Nomb. 18, 13.</p>
+        <p class="footnote">9. Ex. 25, 10.</p>
+        <p class="footnote">10. C. 66, 37.</p>
 			</div>
 		</div>
 	</body>
