--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2427,6 +2427,26 @@
         <p class="footnote">8. Nomb. 18, 13.</p>
         <p class="footnote">9. Ex. 25, 10.</p>
         <p class="footnote">10. C. 66, 37.</p>
+        <p><em>ⲙⲁϩⲓ ⲥⲛⲁⲩ ⲟⲩϫⲟⲥ ⲛ̀ϣⲓⲏ</em> «deux coudées et demie de longueur»<sup class="footnote">1</sup>.</p>
+        <p>La forme abrégée <em>ϫⲉⲥ-</em> ne s'emploie que dans quelques mots composés: <em>ϫⲉⲥ-ⲕⲓϯ</em> «demi-drachme».</p>
+        <p>Les fractions supérieures à «demi» se forment au moyen du préfixe <em>ⲣⲉ</em>:</p>
+        <p><em>ⲣⲉϣⲟⲙⲧ</em> «un tiers»,</p>
+        <p><em>ⲣⲉϥⲧⲱⲟⲩ</em> «un quart»,</p>
+        <p><em>ⲣⲉϯⲟⲩ</em> «un cinquième»,</p>
+        <p><em>ⲣⲉⲥⲟⲟⲩ</em> «un sixième»,</p>
+        <p><em>ⲣⲉϣⲁϣϥ</em> «un septième»,</p>
+        <p><em>ⲣⲉϣⲙⲏⲛ</em> «un huitième»,</p>
+        <p><em>ⲣⲉⲯⲓⲧ</em> «un neuvième»,</p>
+        <p><em>ⲣⲉⲙⲏⲧ</em> «un dixième».</p>
+        <p>Ex: <em>ⲫⲣⲉϣⲟⲙⲧ ⲛ̀ⲟⲩϩⲓⲛ</em> «le tiers d'un hin»<sup class="footnote">2</sup>.</p>
+        <p>On trouve aussi, mais rarement, comme préfixe fractionnaire <em>ⲧⲉⲣⲉ</em>, ex. <em>ⲡⲓⲧⲉⲣⲉ-ϥⲧⲱⲟⲩ</em> «le quart»<sup class="footnote">3</sup>, et <em>ⲟⲩⲉⲛ-</em> dont la forme pleine <em>ⲟⲩⲱⲛ</em> n'est employée qu'en Ṣaꜥidique: <em>ⲡⲓⲟⲩⲉⲛ-ϥⲧⲱⲟⲩ</em> «la quatrième partie»<sup class="footnote">4</sup>.</p>
+        <p>II. Notation du temps.</p>
+        <p>L'année (<em>ϯⲣⲟⲙⲡⲓ</em>) qui commence le 29 août<sup class="footnote">5</sup> est composée de 12 mois (<em>ⲁⲃⲟⲧ</em>) chacun de 30 jours. Elle est augmentée de 5 jours complémentaires (6 dans l'année bissextile) qui forment le petit mois (<em>ⲡⲓⲕⲟⲩϫⲓ ⲛ̀ⲁⲃⲟⲧ</em>).</p>
+        <p class="footnote">1. Ex. 25, 10.</p>
+        <p class="footnote">2. Nomb. 15, 6.</p>
+        <p class="footnote">3. Lév. 23, 13.</p>
+        <p class="footnote">4. Ezéch. 5, 12.</p>
+        <p class="footnote">5. Le 30, dans l'année qui suit l'année bissextile.<br>Les Egyptiens célèbrent le premier jour de leur année comme un jour de fête et lui donnent le nom persan de <i>Neirouz</i> (<em>نيروز</em>).<br>Dans le calendrier non réformé que gardent encore les Coptes schismatiques, le premier jour de l'an tombe le 13 Septembre.</p>
 			</div>
 		</div>
 	</body>
