--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2447,6 +2447,60 @@
         <p class="footnote">3. Lév. 23, 13.</p>
         <p class="footnote">4. Ezéch. 5, 12.</p>
         <p class="footnote">5. Le 30, dans l'année qui suit l'année bissextile.<br>Les Egyptiens célèbrent le premier jour de leur année comme un jour de fête et lui donnent le nom persan de <i>Neirouz</i> (<em>نيروز</em>).<br>Dans le calendrier non réformé que gardent encore les Coptes schismatiques, le premier jour de l'an tombe le 13 Septembre.</p>
+        <p>Voici les noms des mois:</p>
+        <table>
+          <tr>
+            <th>Boḥairique.</th><th>Ṣaꜥidique.</th><th></th>
+          </tr>
+          <tr>
+            <td><em>ⲑⲱⲟⲩⲧ</em></td><td><em>ⲑⲟⲟⲩⲧ, ⲑⲁⲩⲧ</em></td><td><em>توت</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲁⲟⲡⲓ</em></td><td><em>ⲡⲁⲁⲡⲉ, ⲡⲟⲟⲡⲉ</em></td><td><em>بابه</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲁⲑⲱⲣ</em></td><td><em>ϩⲁⲧⲱⲣ</em></td><td><em>هتور</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲭⲟⲓⲁⲕ</em></td><td><em>ⲕⲓⲁϩⲕ, ⲭⲟⲓⲁϩⲕ</em></td><td><em>كيهك</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲧⲱⲃⲓ</em></td><td><em>ⲧⲱⲃⲉ</em></td><td><em>طوبه</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲙⲉⲭⲓⲣ</em></td><td><em>ⲙ̄ϣⲓⲣ</em></td><td><em>امشير</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲫⲁⲙⲉⲛⲱⲑ</em></td><td><em>ⲡⲁⲣⲙϩⲁⲧ</em></td><td><em>برمهات</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲫⲁⲣⲙⲟⲩⲑⲓ</em></td><td><em>ⲡⲁⲣⲙⲟⲩⲧⲉ</em></td><td><em>برموده</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲁⲭⲱⲛ, ⲡⲁϣⲟⲛⲥ</em></td><td><em>ⲡⲁϣⲟⲛⲥ</em></td><td><em>بشنس</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲁⲱⲛⲓ</em></td><td><em>ⲡⲁⲱⲛⲉ, ⲡⲁⲁⲛⲉ</em></td><td><em>بؤونه</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲉⲡⲏⲡ</em></td><td><em>ⲉⲡⲉⲡ</em></td><td><em>ابيب</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲙⲉⲥⲱⲣⲏ</em></td><td><em>ⲙⲉⲥⲱⲣⲏ</em></td><td><em>مسرى</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲕⲟⲩϫⲓ ⲛ̀ⲁⲃⲟⲧ</em></td><td></td><td><em>خمسة ايام النسي</em></td>
+          </tr>
+        </table>
+        <p>Pour indiquer le quantième du mois, on se sert des nombres cardinaux précédés de <em>ⲥⲟⲩ</em>:</p>
+        <p><em>ϧⲉⲛ ⲥⲟⲩⲓ̅ ⲙ̀ⲡⲓⲁⲃⲟⲩⲧ</em> «le 10 du mois»<sup class="footnote">1</sup>.</p>
+        <p><em>ⲛ̀ⲥⲟⲩⲓ̅ⲇ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲛ̀ϩⲟⲩⲓⲧ</em> «le 14 du premier mois»<sup class="footnote">2</sup>.</p>
+        <p><i>Remarque.</i> Le premier du mois se dit <em>ⲥⲟⲩⲁⲓ</em> pour <em>ⲥⲟⲩⲟⲩⲁⲓ</em>:</p>
+        <p><em>ⲛ̀ⲥⲟⲩⲁⲓ ⲙ̀ⲡⲓⲁⲃⲟⲧ</em> «au premier jour du mois»<sup class="footnote">3</sup>.</p>
+        <p>Le jours de la semaine (<em>ϯⲉⲃⲇⲟⲙⲁⲥ</em>) sont:</p>
+        <p class="footnote">1. Ex. 12, 13.</p>
+        <p class="footnote">2. Ex. 12, 18.</p>
+        <p class="footnote">3. Gen. 8, 13.</p>
 			</div>
 		</div>
 	</body>
