--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2501,6 +2501,29 @@
         <p class="footnote">1. Ex. 12, 13.</p>
         <p class="footnote">2. Ex. 12, 18.</p>
         <p class="footnote">3. Gen. 8, 13.</p>
+        <table>
+          <tr>
+            <td><em>ϯⲕⲩⲣⲓⲁⲕⲏ</em></td><td><em>الاحد</em></td><td>dimanche,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲃ̅</em></td><td><em>الاثنين</em></td><td>lundi,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲅ̅</em></td><td><em>الثلاثاء</em></td><td>mardi,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲇ̅</em></td><td><em>الاربعاء</em></td><td>mercredi,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲉ̅</em></td><td><em>الخميس</em></td><td>jeudi,</td>
+          </tr>
+          <tr>
+            <td><em>ϯⲡⲁⲣⲁⲥⲕⲉⲩⲏ</em></td><td><em>الجممة</em></td><td>vendredi,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲥⲁⲃⲃⲁⲧⲟⲛ</em></td><td><em>السبت</em></td><td>samedi.</td>
+          </tr>
+        </table>
 			</div>
 		</div>
 	</body>
