--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2524,6 +2524,61 @@
             <td><em>ⲡⲓⲥⲁⲃⲃⲁⲧⲟⲛ</em></td><td><em>السبت</em></td><td>samedi.</td>
           </tr>
         </table>
+        <p>Ces noms peuvent aussi être précédés du mot <em>ⲉϩⲟⲟⲩ</em> «jour»:</p>
+        <table>
+          <tr>
+            <td><em>ⲡⲓ-ⲉϩⲟⲟⲩ ⲛ̀ⲕⲩⲣⲓⲁⲕⲟⲛ</em></td><td><em>يوم الاحد</em></td>
+          </tr>
+          <tr>
+            <td><em>ⲡ-ⲉϩⲟⲟⲩ ⲙ̀ⲡ-ⲃ̅</em></td><td><em>يوم الاثنين</em></td>
+          </tr>
+        </table>
+        <p>Dans la table des Théotokies les jours sont encore désignés par les adjectifs ordinaux:</p>
+        <table>
+          <tr>
+            <td><em>ⲡⲓⲉϩⲟⲟⲩ ⲙ̀ⲙⲁϩⲃ̅</em></td><td>le deuxième jour,</td>
+          </tr>
+          <tr>
+            <td><em>ⲡⲓⲉϩⲟⲟⲩ ⲙ̀ⲙⲁϩⲅ̅</em></td><td>le troisième jour.</td>
+          </tr>
+        </table>
+        <p>Le copte a trois termes pour dire «heure»:</p>
+        <p>1. <em>ⲁϫⲡ</em> (<em>ϯ</em>), forme non accentuée, toujours suivie d'un nombre:</p>
+        <table>
+          <tr>
+            <td><em>ϯⲡⲣⲟⲥⲉⲩⲭⲏ ⲛ̀ⲧⲉ ⲁϫⲡⲅ̅ϯ</em></td><td>«la prière de tierce»<sup class="footnote">1</sup>;</td>
+          </tr>
+          <tr>
+            <td><em>ϯⲡⲣⲟⲥⲉⲩⲭⲏ ⲛ̀ⲧⲉ ⲁϫⲡⲋ̅</em></td><td>«la prière de sexte»<sup class="footnote">2</sup>;</td>
+          </tr>
+          <tr>
+            <td><em>ϯⲡⲣⲟⲥⲉⲩⲭⲏ ⲛ̀ⲧⲉ ⲁϫⲡⲑ̅ϯ</em></td><td>«la prière de none»<sup class="footnote">3</sup>.</td>
+          </tr>
+        </table>
+        <p>2. <em>ⲟⲩⲛⲟⲩ</em> (<em>ϯ</em>), forme pleine:</p>
+        <table>
+          <tr>
+            <td><em>ϧⲉⲛ ⲁϫⲡⲍ̅ϯ ⲟⲩⲛⲟⲩ ⲛ̀ⲥⲁϥ</em></td><td>«hier à 7 heures» (<i>littér.</i> à l'heure de 7 h.)<sup class="footnote">4</sup>.</td>
+          </tr>
+        </table>
+        <p>3. <em>ⲛⲁⲩ</em> «moment, temps» qui correspond au français «environ, vers»:</p>
+        <table>
+          <tr>
+            <td><em>ⲙ̀ⲫⲛⲁⲩ ⲙ̀ⲙⲉⲣⲓ</em></td><td>«vers midi».</td>
+          </tr>
+          <tr>
+            <td><em>ⲙ̀ⲫⲛⲁⲩ ⲛ̀ⲁϫⲡⲑ̅ϯ</em></td><td>«vers neuf heures».<sup class="footnote">5</sup></td>
+          </tr>
+          <tr>
+            <td><em>ⲙ̀ⲫⲛⲁⲩ ⲛ̀ⲣⲟⲩϩⲓ</em></td><td>«vers le soir».<sup class="footnote">6</sup></td>
+          </tr>
+        </table>
+        <p class="footnote">1. Br. 95.</p>
+        <p class="footnote">2. Br. 141.</p>
+        <p class="footnote">3. Br. 195.</p>
+        <p class="footnote">4. Jean 4, 52.</p>
+        <p class="footnote">5. Br. 214.</p>
+        <p class="footnote">6. Gen. 19, 1.</p>
 			</div>
 		</div>
 	</body>
