--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2584,7 +2584,17 @@
     <p>Des Verbes en Eux-Mêmes.</p>
     <p>I. Formes des verbes.</p>
     <p>On distingue dans le verbe copte deux formes importantes: l'infinitif et le qualitatif.</p>
-    
+    <p>A. Infinitif.</p>
+    <p><i>1. Sens.</i></p>
+    <p>L'infinitif est la forme primitive, il indique toujours une <i>action</i>.</p>
+    <p>Dans les verbes <i>transitifs</i>, il désigne une action qui peut être exercée de deux manières.</p>
+    <p>Elle peut passer à un autre objet (sens actif), ou bien rester dans le sujet même qui agit (sens neutre).</p>
+    <p><em>ⲟⲩⲱⲛ</em> signifie «ouvrir» et «s'ouvrir»,</p>
+    <p><em>ⲑⲱⲟⲩϯ</em> «réunir» et «se réunir».</p>
+    <p>Dans le premier cas ces verbes ont un complément direct; dans le second cas, le complément direct devient sujet:</p>
+    <p><em>ⲁϥⲟⲩⲱⲛ ⲙ`ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
+<em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit »<sup class="footnote">1</sup>.</p>
+    <p class="footnote">1. MS. 424.</p>
   </div>
 </div>
 	</body>
