--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2595,6 +2595,14 @@
     <p><em>ⲁϥⲟⲩⲱⲛ ⲙ`ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
 <em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit »<sup class="footnote">1</sup>.</p>
     <p class="footnote">1. MS. 424.</p>
+    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲙ̀ⲡⲓⲙⲱⲟⲩ</em> «il réunit l'eau»;</p>
+    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲛ`ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit»<sup class="footnote">1</sup>.</p>
+    <p>Dans les verbes <i>intransitifs</i>, l'infinitif indique une action qui reste dans le sujet lui-même; dans les verbes <i>qualitatifs</i>, l'action d'acquérir la qualité exprimée par la racine;</p>
+    <p><em>ⲁⲓⲁⲓ</em> «croître»,</p>
+    <p><em>ⲟⲩⲃⲁϣ</em> «devenir blanc»,</p>
+    <p><em>ϣⲱⲡⲓ</em> «devenir»,</p>
+    <p><em>ϩⲗⲟϫ</em> «devenir doux».</p>
+    <p><i>2. Genre.</i></p>
   </div>
 </div>
 	</body>
