--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2603,6 +2603,11 @@
     <p><em>ϣⲱⲡⲓ</em> «devenir»,</p>
     <p><em>ϩⲗⲟϫ</em> «devenir doux».</p>
     <p><i>2. Genre.</i></p>
+    <p>L'infinitif en égyptien était traité comme un nom, il était masculin ou féminin; il y a lieu en copte de faire la même distinction.</p>
+    <p>L'infinitif <i>masculin</i> est le radical verbal sans aucune addition: <em>ⲃⲱⲗ</em> «délier», <em>ⲫⲱⲣϣ</em> «étendre».</p>
+    <p>L'infinitif <i>féminin</i> est le radical augmenté de la terminaison du féminin <em>ⲓ</em> (ég. <i>it</i>): <em>ⲙⲓⲥⲓ</em> «enfanter», <em>ⲓⲣⲓ</em> «faire» (22).</p>
+    <p>Mais il importe de remarquer que, par suite de la chute d'une consonne finale (21, 22), plusieurs infinitifs masculins sont aussi terminés en <em>ⲓ</em>, par exemple: <em>ϣⲱⲡⲓ</em> «être» (21), <em>ⲣⲱϧⲓ</em> «laver» (22).</p>
+    <p>On distingue les infinitifs féminins surtout par leur voyelle formative (196). D'ailleurs ils sont tous compris dans le 4<sup>e</sup> groupe des verbes simples (204, 218) et dans le premier groupe des verbes causatifs formés du préfixe <em>ⲥ</em> (223, 1).</p>
   </div>
 </div>
 	</body>
