--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2608,6 +2608,9 @@
     <p>L'infinitif <i>féminin</i> est le radical augmenté de la terminaison du féminin <em>ⲓ</em> (ég. <i>it</i>): <em>ⲙⲓⲥⲓ</em> «enfanter», <em>ⲓⲣⲓ</em> «faire» (22).</p>
     <p>Mais il importe de remarquer que, par suite de la chute d'une consonne finale (21, 22), plusieurs infinitifs masculins sont aussi terminés en <em>ⲓ</em>, par exemple: <em>ϣⲱⲡⲓ</em> «être» (21), <em>ⲣⲱϧⲓ</em> «laver» (22).</p>
     <p>On distingue les infinitifs féminins surtout par leur voyelle formative (196). D'ailleurs ils sont tous compris dans le 4<sup>e</sup> groupe des verbes simples (204, 218) et dans le premier groupe des verbes causatifs formés du préfixe <em>ⲥ</em> (223, 1).</p>
+    <p><i>3. Formes.</i></p>
+    <p>Selon le mode d'adjonction de son complément direct, l'infinitif des verbes <i>transitifs</i> peut avoir les trois formes expliquées aux §§ 33–40:</p>
+    <p class="footnote">1. Gen. 1, 9.</p>
   </div>
 </div>
 	</body>
