--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2611,6 +2611,35 @@
     <p><i>3. Formes.</i></p>
     <p>Selon le mode d'adjonction de son complément direct, l'infinitif des verbes <i>transitifs</i> peut avoir les trois formes expliquées aux §§ 33–40:</p>
     <p class="footnote">1. Gen. 1, 9.</p>
+    <p>1. La forme <i>pleine</i> à l'état absolu: <em>ⲁϥⲥⲱ́ⲛⲧ ⲙ̀ⲡⲓⲣⲱ́ⲙⲓ</em> «il créa l'homme».</p>
+    <p>2. La forme <i>abrégée</i> à l'état construit: <em>ⲁϥⲥⲉⲛⲧ-ⲡⲓⲣⲱ́ⲙⲓ</em>.</p>
+    <p>3. La forme <i>avec suffixes</i> à l'état pronominal: <em>ⲁϥⲥⲟ́ⲛⲧϥ</em> «il le créa».</p>
+    <p>Les infinitifs <i>masculins</i> (193) ont pour voyelle formative, à <i>l'état absolu</i>, <i>o</i> long ou bref: <em>ⲱ</em> dans les monosyllabes et les syllabes ouvertes: <em>ⲃⲱⲗ</em>, <em>ⲫⲱ-ⲣϣ</em> «étendre», <em>ⲥⲱ-ⲧⲉⲙ</em> «écouter»;</p>
+    <p><em>ⲟ</em> dans les syllabes fermées quand le verbe est polysyllabique: <em>ⲥⲟⲃ-ϯ</em> «préparer», <em>ⲃⲟⲣ-ⲃⲉⲣ</em> «chasser».</p>
+    <p>Dans les infinitifs <i>féminins</i> (194), la voyelle formative est en général <em>ⲓ</em>, quelquefois <em>ⲁ</em> ou <em>ⲉ</em>: <em>ⲙⲓⲥⲓ</em>, <em>ⲓⲣⲓ</em>, <em>ⲣⲁϣⲓ</em> «se réjouir», <em>ⲫⲉⲣⲓ</em> «briller».</p>
+    <p>A <i>l'état construit</i>, le verbe ne portant pas l'accent tonique, la voyelle formative est remplacée par la voyelle auxiliaire <em>ⲉ</em> (19): <em>ⲃⲉⲗ-</em>, <em>ⲫⲉⲣϣ-</em>, <em>ⲥⲉⲧⲉⲙ-</em>, <em>ⲥⲉⲃⲧⲉ-</em>, <em>ⲃⲉⲣⲃⲉⲣ-</em>.</p>
+    <p>A <i>l'état pronominal</i>, les infinitifs <i>masculins</i> ont, comme à l'état absolu, <i>o</i> pour voyelle formative, mais avec la <i>quantité opposée</i>:</p>
+    <p>Les infinitifs en <em>ⲱ</em> prennent <em>ⲟ</em>: <em>ⲃⲟⲗ⸗</em>, <em>ⲫⲟⲣϣ⸗</em>, <em>ⲥⲟⲑⲙ⸗</em> (23).</p>
+    <p>Les infinitifs en <em>ⲟ</em> prennent <em>ⲱ</em> à la syllabe suivante (14): <em>ⲥⲉⲃⲧⲱⲧ⸗</em>, <em>ⲃⲉⲣⲃⲱⲣ⸗</em>.</p>
+    <p>Dans les infinitifs <i>féminins</i>, si le verbe est polysyllabique, <em>ⲓ</em> se change régulièrement en <em>ⲁ</em>; s'il est monosyllabique, <em>ⲓ</em> se maintient et est suivi de <em>ⲧ</em> (220): <em>ⲙⲁⲥ⸗</em>, <em>ⲁⲓ⸗</em>, (27); <em>ϣⲓ ϣⲓⲧ⸗</em> «mesurer».</p>
+    <p>Les verbes qui ont une voyelle formative autre que <em>ⲓ</em> sont prèsque tous intransitifs (219, 220).</p>
+    <p>Diverses influences peuvent faire subir à ces règles générales des exceptions (29–33); elles seront indiquées dans la classification des verbes et plus en détail dans le tableau général.</p>
+    <p>Pour la suffixation au verbe, voir 280 et suivants.</p>
+    <p>B. Qualitatif.</p>
+    <p>Le <i>qualitatif</i> est une forme spéciale du verbe, qui ressemble à l'infinitif comme emploi et indétermination du temps, mais en diffère considérablement par le sens. Tandis que l'infinitif indique toujours une <i>action</i>, le qualitatif désigne le résultat de cette action, l'effet produit par elle, l'état, la manière d'être, la <i>qualité</i> où elle aboutit et se termine; de là précisément dérive son nom.</p>
+    <p>Le qualitatif existe dans les verbes transitifs et intransitifs. Dans les verbes transitifs, il a le sens <i>passif</i>:</p>
+    <p><em>ⲃⲱⲗ</em> «délier», <i>qual.</i> <em>ⲃⲏⲗ</em> «être délié»;</p>
+    <p><em>ϭⲓⲥⲓ</em> «exalter», <i>qual.</i> <em>ϭⲟⲥⲓ</em> «être exalté».
+En français, pour plus de commodité, nous traduisons le qualitatif des verbes transitifs par l'infinitif passif, mais il faut remarquer que le sens est assez différent. <em>ⲃⲏⲗ</em> signifie proprement «état ou <i>qualité</i> de ce qui <i>est délié</i>», sans importer l'idée d'une action subie actuellement par ce qui est délié. De même pour <em>ϭⲟⲥⲓ</em>, etc.</p>
+    <p>Dans les verbes intransitifs, le qualitatif garde le sens <i>neutre</i>:</p>
+    <p><em>ⲟⲩⲃⲁϣ</em> «devenir blanc», <i>qual.</i> <em>ⲟⲩⲟⲃϣ</em> «être blanc»;</p>
+    <p><em>ⲁϣⲁⲓ</em> «se multiplier», <i>qual.</i> <em>ⲟϣ</em> «être abondant».</p>
+    <p>Le qualitatif se forme de l'infinitif par un changement intérieur de voyelle ou par l'addition d'une terminaison (207 et suivants). Il se conjugue comme l'infinitif à l'indicatif présent et à l'imparfait.</p>
+    <p>Dans quelques verbes transitifs, le qualitatif a, à peu près, le sens de l'infinitif qui a disparu ou est peu employé. Tels sont:</p>
+    <p><em>ⲕⲏⲛ</em> «cesser», au lieu de <em>ⲕⲱⲛ</em> inusité;</p>
+    <p><em>ⲓⲏⲥ</em> «se hâter», à côté de <em>ⲓⲱⲥ</em> plus rare.</p>
+    <p>Tous les verbes n'ont pas nécessairement un qualitatif; celui-ci manque dans quelques verbes transitifs et intransitifs, comme dans <em>ϫⲱ</em> «dire», <em>ⲙⲟⲥϯ</em> «haïr», <em>ⲧⲱⲟⲩⲛ</em> «lever », <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁⲩ</em> «voir».</p>
+    <p>Les verbes qui n'ont que l'infinitif <i>absolu</i>, sans les autres formes et sans le qualitatif, sont appelés verbes <i>invariables</i>; les autres, verbes <i>variables</i>.</p>
   </div>
 </div>
 	</body>
