--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2186,8 +2186,8 @@
     <p><em>ϥⲛⲁⲁⲓⲧⲉⲛ ⲛ̀ⲣⲁⲙⲁⲟ</em> «il nous rendra riches»<sup class="footnote">4</sup>.</p>
     <p><em>ⲉⲥ-ⲟⲓ ⲛ̀ⲣⲉⲙϩⲉ</em> «elle est libre»<sup class="footnote">5</sup>.</p>
     <p>De même, le mot qui est au second rang demeure le plus souvent invariable, parfois aussi il s'accorde:</p>
-    <p><em>ϩⲁⲛⲣⲱⲙⲓ ⲛ`ⲥⲁⲃⲉ</em> «des hommes prudents»<sup class="footnote">6</sup>.</p>
-    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ`ⲥϩⲓⲙⲓ</em> «des femmes prudentes»<sup class="footnote">7</sup>.</p>
+    <p><em>ϩⲁⲛⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ</em> «des hommes prudents»<sup class="footnote">6</sup>.</p>
+    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ̀ⲥϩⲓⲙⲓ</em> «des femmes prudentes»<sup class="footnote">7</sup>.</p>
     <p class="footnote">1. Jean 1, 3.</p>
     <p class="footnote">2. Th. 128.</p>
     <p class="footnote">3. Luc 14, 11.</p>
@@ -2592,11 +2592,11 @@
     <p><em>ⲟⲩⲱⲛ</em> signifie «ouvrir» et «s'ouvrir»,</p>
     <p><em>ⲑⲱⲟⲩϯ</em> «réunir» et «se réunir».</p>
     <p>Dans le premier cas ces verbes ont un complément direct; dans le second cas, le complément direct devient sujet:</p>
-    <p><em>ⲁϥⲟⲩⲱⲛ ⲙ`ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
+    <p><em>ⲁϥⲟⲩⲱⲛ ⲙ̀ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
 <em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit »<sup class="footnote">1</sup>.</p>
     <p class="footnote">1. MS. 424.</p>
     <p><em>ⲁϥⲑⲱⲟⲩϯ ⲙ̀ⲡⲓⲙⲱⲟⲩ</em> «il réunit l'eau»;</p>
-    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲛ`ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲛ̀ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit»<sup class="footnote">1</sup>.</p>
     <p>Dans les verbes <i>intransitifs</i>, l'infinitif indique une action qui reste dans le sujet lui-même; dans les verbes <i>qualitatifs</i>, l'action d'acquérir la qualité exprimée par la racine;</p>
     <p><em>ⲁⲓⲁⲓ</em> «croître»,</p>
     <p><em>ⲟⲩⲃⲁϣ</em> «devenir blanc»,</p>
@@ -2638,8 +2638,9 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>Dans quelques verbes transitifs, le qualitatif a, à peu près, le sens de l'infinitif qui a disparu ou est peu employé. Tels sont:</p>
     <p><em>ⲕⲏⲛ</em> «cesser», au lieu de <em>ⲕⲱⲛ</em> inusité;</p>
     <p><em>ⲓⲏⲥ</em> «se hâter», à côté de <em>ⲓⲱⲥ</em> plus rare.</p>
-    <p>Tous les verbes n'ont pas nécessairement un qualitatif; celui-ci manque dans quelques verbes transitifs et intransitifs, comme dans <em>ϫⲱ</em> «dire», <em>ⲙⲟⲥϯ</em> «haïr», <em>ⲧⲱⲟⲩⲛ</em> «lever », <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁⲩ</em> «voir».</p>
+    <p>Tous les verbes n'ont pas nécessairement un qualitatif; celui-ci manque dans quelques verbes transitifs et intransitifs, comme dans <em>ϫⲱ</em> «dire», <em>ⲙⲟⲥϯ</em> «haïr», <em>ⲧⲱⲟⲩⲛ</em> «lever», <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁⲩ</em> «voir».</p>
     <p>Les verbes qui n'ont que l'infinitif <i>absolu</i>, sans les autres formes et sans le qualitatif, sont appelés verbes <i>invariables</i>; les autres, verbes <i>variables</i>.</p>
+    
   </div>
 </div>
 	</body>
